Bug 170727 - Remove the escaped dot from body lines before saving in the offline store so dot at the beginning of news posts won't be doubled. r=benc